--- a/404.html
+++ b/404.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; URL='./index.html'" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>If you're not redirected, click <a href="./index.html">here</a>.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>404 - Not Found</title>
+  <script type="text/javascript">
+    // This will redirect any unknown routes to the index.html file
+    var pathname = window.location.pathname;
+    window.location.replace('/NguyenDoThienAn' + pathname);
+  </script>
+</head>
+<body>
+  <h1>404 - Page Not Found</h1>
+  <p>Redirecting...</p>
+</body>
 </html>
